Enhance: scrollbar for sidebar - issue #2

--- a/src/assets/sass/_sidebar.scss
+++ b/src/assets/sass/_sidebar.scss
@@ -13,20 +13,10 @@
     overflow-y: auto;    
     transition: background-color .8s;
 
-
     &::-webkit-scrollbar {
         width: 0px;
+        height: 0;
     }
-
-    &::-webkit-scrollbar-track,
-    &::-webkit-scrollbar-thumb {
-        border-radius: 10px;
-        background-color: transparent;
-    }
-
-    // &::-webkit-scrollbar-thumb:hover {
-    //     background-color: rgba(0, 0, 0, 0.25);
-    // }
 
     .logo {
         text-align: center;
